test/sh/error/misc/token_iter_keep_loc.sk
x := "


" #{ some comment #} invalid_token
